<resources>
    <string name="app_name">Калькулятор</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multi">*</string>
    <string name="btn_div">/</string>
    <string name="btn_equal">=</string>
    <string name="btn_C">C</string>
    <string name="btn_dot">.</string>
    <string name="btn_fn">FN</string>
    <string name="btn_alt">ALT</string>
    <string name="main_image">background image</string>
    <string name="btn_AC">AC</string>
    <string name="calculator_launch">Mars Calculator</string>
    <string name="theme_1">Стандартная тема</string>
    <string name="theme_2">Тема с тулбаром</string>
    <string name="btn_set_theme">Установить тему</string>
</resources>