<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mars_2051748_1280" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/key_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="4">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="16dp"
            style="@style/display_text"
            app:layout_constraintBottom_toTopOf="@id/key_field"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1111111\n2222222\n3333333"/>
        </androidx.core.widget.NestedScrollView>

        <GridLayout
            android:id="@+id/key_field"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="4"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@id/scroll_display"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_columnSpan="2"
                android:text="@string/btn_C" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_fn"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_fn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multi"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_multi" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_div"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_div" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_minus" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_rowSpan="2"
                android:text="@string/btn_plus" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_alt"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_alt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/CalculatorButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_dot" />

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>