<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/choosing_theme_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/theme_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_1" />

        <RadioButton
            android:id="@+id/theme_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_2" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_set_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_theme" />

</LinearLayout>